added kyc verification page

--- a/assets/translations/bn.json
+++ b/assets/translations/bn.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS সতর্কতা সক্রিয় করতে জরুরি যোগাযোগ যোগ করুন",
   "remove": "মুছে ফেলুন",
   "search_contacts": "যোগাযোগ খুঁজুন...",
-  "unknown": "অজানা"
+  "unknown": "অজানা",
+  "Kyc_title": "কেওয়াইসি যাচাই",
+  "Kyc_sub_title": "কেওয়াইসি আপডেট এবং যাচাই করুন"
 }
