--- a/assets/translations/gu.json
+++ b/assets/translations/gu.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS એલર્ટ સક્ષમ કરવા માટે આકસ્મિક સંપર્કો ઉમેરો",
   "remove": "દૂર કરો",
   "search_contacts": "સંપર્ક શોધો...",
-  "unknown": "અજ્ઞાત"
+  "unknown": "અજ્ઞાત",
+  "Kyc_title": "KYC ચકાસણી",
+  "Kyc_sub_title": "KYC ને અપડેટ અને ચકાસો"
 }
