--- a/assets/translations/hi.json
+++ b/assets/translations/hi.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS अलर्ट सक्षम करने के लिए आपातकालीन संपर्क जोड़ें",
   "remove": "हटाएं",
   "search_contacts": "संपर्क खोजें...",
-  "unknown": "अज्ञात"
+  "unknown": "अज्ञात",
+  "Kyc_title": "केवाईसी सत्यापन",
+  "Kyc_sub_title": "केवाईसी अपडेट और सत्यापित करें"
 }
