--- a/assets/translations/kn.json
+++ b/assets/translations/kn.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS ಎಚ್ಚರಿಕೆಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಲು ತುರ್ತು ಸಂಪರ್ಕಗಳನ್ನು ಸೇರಿಸಿ",
   "remove": "ತೆಗೆದುಹಾಕಿ",
   "search_contacts": "ಸಂಪರ್ಕಗಳನ್ನು ಹುಡುಕಿ...",
-  "unknown": "ಅಜ್ಞಾತ"
+  "unknown": "ಅಜ್ಞಾತ",
+  "Kyc_title": "KYC ಪರಿಶೀಲನೆ",
+  "Kyc_sub_title": "KYC ನವೀಕರಿಸಿ ಮತ್ತು ಪರಿಶೀಲಿಸಿ"
 }
