--- a/assets/translations/ml.json
+++ b/assets/translations/ml.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS അലർട്ടുകൾ പ്രവർത്തിപ്പിക്കാൻ അടിയന്തര കോൺടാക്റ്റുകൾ ചേർക്കുക",
   "remove": "നീക്കം ചെയ്യുക",
   "search_contacts": "കോണ്ടാക്ടുകൾ തിരയുക...",
-  "unknown": "അജ്ഞാതം"
+  "unknown": "അജ്ഞാതം",
+  "Kyc_title": "KYC സ്ഥിരീകരണം",
+  "Kyc_sub_title": "KYC അപ്‌ഡേറ്റ് ചെയ്ത് സ്ഥിരീകരിക്കുക"
 }
