--- a/assets/translations/pa.json
+++ b/assets/translations/pa.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS ਅਲਰਟਾਂ ਨੂੰ ਸਮਰਥਿਤ ਕਰਨ ਲਈ ਐਮਰਜੈਂਸੀ ਸੰਪਰਕ ਜੋੜੋ",
   "remove": "ਹਟਾਓ",
   "search_contacts": "ਸੰਪਰਕ ਖੋਜੋ...",
-  "unknown": "ਅਣਜਾਣ"
+  "unknown": "ਅਣਜਾਣ",
+   "Kyc_title": "KYC ਪ੍ਰਮਾਣਿਕਤਾ",
+  "Kyc_sub_title": "KYC ਅਪਡੇਟ ਅਤੇ ਪ੍ਰਮਾਣਿਤ ਕਰੋ"
 }
