--- a/assets/translations/ta.json
+++ b/assets/translations/ta.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS எச்சரிக்கைகளை இயக்க அவசர தொடர்புகளைச் சேர்க்கவும்",
   "remove": "அகற்று",
   "search_contacts": "தொடர்புகளைத் தேடுக...",
-  "unknown": "அறியப்படாதது"
+  "unknown": "அறியப்படாதது",
+  "Kyc_title": "KYC சரிபார்ப்பு",
+  "Kyc_sub_title": "KYC-ஐ புதுப்பித்து சரிபார்க்கவும்"
 }
