--- a/assets/translations/te.json
+++ b/assets/translations/te.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS అలర్ట్‌లను ప్రారంభించడానికి ఎమర్జెన్సీ కాంటాక్టులను జోడించండి",
   "remove": "తొలగించు",
   "search_contacts": "కాంటాక్ట్స్ వెతకండి...",
-  "unknown": "తెలియదు"
+  "unknown": "తెలియదు",
+  "Kyc_title": "KYC ధృవీకరణ",
+  "Kyc_sub_title": "KYC ను నవీకరించి ధృవీకరించండి"
 }
