--- a/assets/translations/ur.json
+++ b/assets/translations/ur.json
@@ -29,5 +29,7 @@
   "no_contact_sub": "SOS الرٹس کو فعال کرنے کے لیے ہنگامی رابطے شامل کریں",
   "remove": "ہٹائیں",
   "search_contacts": "رابطے تلاش کریں...",
-  "unknown": "نامعلوم"
+  "unknown": "نامعلوم",
+  "Kyc_title": "KYC توثیق",
+  "Kyc_sub_title": "KYC کو اپ ڈیٹ اور توثیق کریں"
 }
