final changes, made it responsive

--- a/assets/translations/bn.json
+++ b/assets/translations/bn.json
@@ -30,6 +30,18 @@
   "remove": "মুছে ফেলুন",
   "search_contacts": "যোগাযোগ খুঁজুন...",
   "unknown": "অজানা",
-  "Kyc_title": "কেওয়াইসি যাচাই",
-  "Kyc_sub_title": "কেওয়াইসি আপডেট এবং যাচাই করুন"
+  "kyc_title": "পর্যটক নিবন্ধন",
+  "kyc_sub_title": "আপনার পর্যটক প্রোফাইল তৈরি করুন",
+  "kyc_sub_null": "আপনি ইতিমধ্যেই আপনার পর্যটক আইডি তৈরি করেছেন",
+  "hello": "হ্যালো",
+  "area": "এলাকা",
+  "area_sub": "নিরাপদ",
+  "safety": "নিরাপত্তা স্কোর",
+  "profile_info": "ব্যক্তিগত তথ্য",
+  "kyc_info": "কে ওয়াই সি তথ্য",
+  "setup_contacts": "জরুরি যোগাযোগ সেটআপ করুন",
+  "setup_contacts_sub": "জরুরি যোগাযোগ নির্বাচন করুন",
+  "setup_contacts_choise": "৫টি পর্যন্ত যোগাযোগ নির্বাচন করুন যারা আপনার জরুরি সতর্কতা পাবেন।",
+  "setup_contacts_select": "নির্বাচিত যোগাযোগ",
+  "continue": "চালিয়ে যান"
 }
