--- a/assets/translations/hi.json
+++ b/assets/translations/hi.json
@@ -30,6 +30,18 @@
   "remove": "हटाएं",
   "search_contacts": "संपर्क खोजें...",
   "unknown": "अज्ञात",
-  "Kyc_title": "केवाईसी सत्यापन",
-  "Kyc_sub_title": "केवाईसी अपडेट और सत्यापित करें"
+  "kyc_title": "पर्यटक पंजीकरण",
+  "kyc_sub_title": "अपनी पर्यटक प्रोफ़ाइल बनाएँ",
+  "kyc_sub_null": "आप पहले ही अपनी पर्यटक आईडी बना चुके हैं",
+  "hello": "नमस्ते",
+  "area": "क्षेत्र",
+  "area_sub": "सुरक्षित",
+  "safety": "सुरक्षा स्कोर",
+  "profile_info": "व्यक्तिगत जानकारी",
+  "kyc_info": "केवाईसी जानकारी",
+  "setup_contacts": "आपातकालीन संपर्क सेट करें",
+  "setup_contacts_sub": "आपातकालीन संपर्क चुनें",
+  "setup_contacts_choise": "5 तक संपर्क चुनें जो आपके आपातकालीन अलर्ट प्राप्त करेंगे।",
+  "setup_contacts_select": "चयनित संपर्क",
+  "continue": "जारी रखें"
 }
