--- a/assets/translations/kn.json
+++ b/assets/translations/kn.json
@@ -30,6 +30,18 @@
   "remove": "ತೆಗೆದುಹಾಕಿ",
   "search_contacts": "ಸಂಪರ್ಕಗಳನ್ನು ಹುಡುಕಿ...",
   "unknown": "ಅಜ್ಞಾತ",
-  "Kyc_title": "KYC ಪರಿಶೀಲನೆ",
-  "Kyc_sub_title": "KYC ನವೀಕರಿಸಿ ಮತ್ತು ಪರಿಶೀಲಿಸಿ"
+  "kyc_title": "ಪ್ರವಾಸಿ ನೋಂದಣಿ",
+  "kyc_sub_title": "ನಿಮ್ಮ ಪ್ರವಾಸಿ ಪ್ರೊಫೈಲ್ ರಚಿಸಿ",
+  "kyc_sub_null": "ನೀವು ಈಗಾಗಲೇ ನಿಮ್ಮ ಪ್ರವಾಸಿ ಐಡಿ ರಚಿಸಿದ್ದೀರಿ",
+  "hello": "ನಮಸ್ಕಾರ",
+  "area": "ಪ್ರದೇಶ",
+  "area_sub": "ಸುರಕ್ಷಿತ",
+  "safety": "ಭದ್ರತಾ ಅಂಕ",
+  "profile_info": "ವೈಯಕ್ತಿಕ ಮಾಹಿತಿ",
+  "kyc_info": "KYC ಮಾಹಿತಿ",
+  "setup_contacts": "ತುರ್ತು ಸಂಪರ್ಕಗಳನ್ನು ಹೊಂದಿಸಿ",
+  "setup_contacts_sub": "ತುರ್ತು ಸಂಪರ್ಕಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+  "setup_contacts_choise": "ನಿಮ್ಮ ತುರ್ತು ಎಚ್ಚರಿಕೆಗಳನ್ನು ಸ್ವೀಕರಿಸಲು ಗರಿಷ್ಠ 5 ಸಂಪರ್ಕಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ.",
+  "setup_contacts_select": "ಆಯ್ಕೆ ಮಾಡಿದ ಸಂಪರ್ಕಗಳು",
+  "continue": "ಮುಂದುವರಿಸಿ"
 }
