--- a/assets/translations/ml.json
+++ b/assets/translations/ml.json
@@ -30,6 +30,18 @@
   "remove": "നീക്കം ചെയ്യുക",
   "search_contacts": "കോണ്ടാക്ടുകൾ തിരയുക...",
   "unknown": "അജ്ഞാതം",
-  "Kyc_title": "KYC സ്ഥിരീകരണം",
-  "Kyc_sub_title": "KYC അപ്‌ഡേറ്റ് ചെയ്ത് സ്ഥിരീകരിക്കുക"
+  "kyc_title": "സഞ്ചാരി രജിസ്ട്രേഷൻ",
+  "kyc_sub_title": "നിങ്ങളുടെ സഞ്ചാരി പ്രൊഫൈൽ സൃഷ്ടിക്കുക",
+  "kyc_sub_null": "നിങ്ങൾ ഇതിനകം നിങ്ങളുടെ സഞ്ചാരി ഐഡി സൃഷ്ടിച്ചിരിക്കുന്നു",
+  "hello": "നമസ്കാരം",
+  "area": "പ്രദേശം",
+  "area_sub": "സുരക്ഷിതം",
+  "safety": "സുരക്ഷാ സ്കോർ",
+  "profile_info": "വ്യക്തിഗത വിവരം",
+  "kyc_info": "KYC വിവരം",
+  "setup_contacts": "അടിയന്തര കോൺടാക്ടുകൾ സജ്ജമാക്കുക",
+  "setup_contacts_sub": "അടിയന്തര കോൺടാക്ടുകൾ തിരഞ്ഞെടുക്കുക",
+  "setup_contacts_choise": "നിങ്ങളുടെ അടിയന്തര അലർട്ടുകൾ ലഭിക്കുന്നതിനായി പരമാവധി 5 കോൺടാക്ടുകൾ തിരഞ്ഞെടുക്കുക.",
+  "setup_contacts_select": "തിരഞ്ഞെടുത്ത കോൺടാക്ടുകൾ",
+  "continue": "തുടരുക"
 }
