--- a/assets/translations/ta.json
+++ b/assets/translations/ta.json
@@ -30,6 +30,18 @@
   "remove": "அகற்று",
   "search_contacts": "தொடர்புகளைத் தேடுக...",
   "unknown": "அறியப்படாதது",
-  "Kyc_title": "KYC சரிபார்ப்பு",
-  "Kyc_sub_title": "KYC-ஐ புதுப்பித்து சரிபார்க்கவும்"
+  "kyc_title": "சுற்றுலா பதிவு",
+  "kyc_sub_title": "உங்கள் சுற்றுலா சுயவிவரத்தை உருவாக்கவும்",
+  "kyc_sub_null": "நீங்கள் ஏற்கனவே உங்கள் சுற்றுலா அடையாளத்தை உருவாக்கியுள்ளீர்கள்",
+  "hello": "வணக்கம்",
+  "area": "பகுதி",
+  "area_sub": "பாதுகாப்பானது",
+  "safety": "பாதுகாப்பு மதிப்பெண்",
+  "profile_info": "தனிப்பட்ட தகவல்",
+  "kyc_info": "KYC தகவல்",
+  "setup_contacts": "அவசர தொடர்புகளை அமைக்கவும்",
+  "setup_contacts_sub": "அவசர தொடர்புகளைத் தேர்ந்தெடுக்கவும்",
+  "setup_contacts_choise": "5 தொடர்புகளைத் தேர்ந்தெடுக்கவும், அவர்கள் உங்கள் அவசர எச்சரிக்கைகளைப் பெறுவார்கள்.",
+  "setup_contacts_select": "தேர்ந்தெடுக்கப்பட்ட தொடர்புகள்",
+  "continue": "தொடரவும்"
 }
