--- a/assets/translations/te.json
+++ b/assets/translations/te.json
@@ -30,6 +30,18 @@
   "remove": "తొలగించు",
   "search_contacts": "కాంటాక్ట్స్ వెతకండి...",
   "unknown": "తెలియదు",
-  "Kyc_title": "KYC ధృవీకరణ",
-  "Kyc_sub_title": "KYC ను నవీకరించి ధృవీకరించండి"
+  "kyc_title": "పర్యాటక నమోదు",
+  "kyc_sub_title": "మీ పర్యాటక ప్రొఫైల్ సృష్టించండి",
+  "kyc_sub_null": "మీరు ఇప్పటికే మీ పర్యాటక ఐడిని సృష్టించారు",
+  "hello": "హలో",
+  "area": "ప్రాంతం",
+  "area_sub": "సురక్షితం",
+  "safety": "భద్రతా స్కోరు",
+  "profile_info": "వ్యక్తిగత సమాచారం",
+  "kyc_info": "KYC సమాచారం",
+  "setup_contacts": "అత్యవసర కాంటాక్టులను సెట్ చేయండి",
+  "setup_contacts_sub": "అత్యవసర కాంటాక్టులను ఎంచుకోండి",
+  "setup_contacts_choise": "మీ అత్యవసర అలర్ట్‌లను స్వీకరించడానికి గరిష్టంగా 5 కాంటాక్టులను ఎంచుకోండి.",
+  "setup_contacts_select": "ఎంచుకున్న కాంటాక్టులు",
+  "continue": "కొనసాగించండి"
 }
