--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -42,6 +42,6 @@
   "setup_contacts": "Setup Emergency Contacts",
   "setup_contacts_sub": "Select Emergency Contacts",
   "setup_contacts_choise": "Choose up to 5 contacts who will receive your emergency alerts.",
-  "setup_contatcs_select": "Selected Contacts",
+  "setup_contacts_select": "Selected Contacts",
   "continue": "Continue"
 }
