--- a/assets/translations/kn.json
+++ b/assets/translations/kn.json
@@ -43,5 +43,7 @@
   "setup_contacts_sub": "ತುರ್ತು ಸಂಪರ್ಕಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ",
   "setup_contacts_choise": "ನಿಮ್ಮ ತುರ್ತು ಎಚ್ಚರಿಕೆಗಳನ್ನು ಸ್ವೀಕರಿಸಲು ಗರಿಷ್ಠ 5 ಸಂಪರ್ಕಗಳನ್ನು ಆಯ್ಕೆಮಾಡಿ.",
   "setup_contacts_select": "ಆಯ್ಕೆ ಮಾಡಿದ ಸಂಪರ್ಕಗಳು",
-  "continue": "ಮುಂದುವರಿಸಿ"
+  "continue": "ಮುಂದುವರಿಸಿ",
+  "notification": "ಅಧಿಸೂಚನೆ",
+  "notification_sub": "ನಿಮ್ಮ ಅಧಿಸೂಚನೆಗಳನ್ನು ಪರಿಶೀಲಿಸಿ"
 }
