--- a/assets/translations/ml.json
+++ b/assets/translations/ml.json
@@ -43,5 +43,7 @@
   "setup_contacts_sub": "അടിയന്തര കോൺടാക്ടുകൾ തിരഞ്ഞെടുക്കുക",
   "setup_contacts_choise": "നിങ്ങളുടെ അടിയന്തര അലർട്ടുകൾ ലഭിക്കുന്നതിനായി പരമാവധി 5 കോൺടാക്ടുകൾ തിരഞ്ഞെടുക്കുക.",
   "setup_contacts_select": "തിരഞ്ഞെടുത്ത കോൺടാക്ടുകൾ",
-  "continue": "തുടരുക"
+  "continue": "തുടരുക",
+  "notification": "അറിയിപ്പ്",
+  "notification_sub": "നിങ്ങളുടെ അറിയിപ്പുകൾ പരിശോധിക്കുക"
 }
