--- a/assets/translations/ta.json
+++ b/assets/translations/ta.json
@@ -43,5 +43,7 @@
   "setup_contacts_sub": "அவசர தொடர்புகளைத் தேர்ந்தெடுக்கவும்",
   "setup_contacts_choise": "5 தொடர்புகளைத் தேர்ந்தெடுக்கவும், அவர்கள் உங்கள் அவசர எச்சரிக்கைகளைப் பெறுவார்கள்.",
   "setup_contacts_select": "தேர்ந்தெடுக்கப்பட்ட தொடர்புகள்",
-  "continue": "தொடரவும்"
+  "continue": "தொடரவும்",
+  "notification": "அறிவிப்பு",
+  "notification_sub": "உங்கள் அறிவிப்புகளை சரிபார்க்கவும்"
 }
