--- a/assets/translations/te.json
+++ b/assets/translations/te.json
@@ -43,5 +43,7 @@
   "setup_contacts_sub": "అత్యవసర కాంటాక్టులను ఎంచుకోండి",
   "setup_contacts_choise": "మీ అత్యవసర అలర్ట్‌లను స్వీకరించడానికి గరిష్టంగా 5 కాంటాక్టులను ఎంచుకోండి.",
   "setup_contacts_select": "ఎంచుకున్న కాంటాక్టులు",
-  "continue": "కొనసాగించండి"
+  "continue": "కొనసాగించండి",
+  "notification": "అధ్యాసూచన",
+  "notification_sub": "మీ అధ్యాసూచనలు తనిఖీ చేయండి"
 }
