--- a/assets/translations/ur.json
+++ b/assets/translations/ur.json
@@ -43,5 +43,7 @@
   "setup_contacts_sub": "ایمرجنسی رابطے منتخب کریں",
   "setup_contacts_choise": "اپنی ایمرجنسی الرٹس وصول کرنے کے لیے زیادہ سے زیادہ 5 رابطے منتخب کریں۔",
   "setup_contacts_select": "منتخب رابطے",
-  "continue": "جاری رکھیں"
+  "continue": "جاری رکھیں",
+  "notification": "اطلاع",
+  "notification_sub": "اپنی اطلاعات چیک کریں"
 }
