made some ui changes

--- a/assets/translations/bn.json
+++ b/assets/translations/bn.json
@@ -36,7 +36,7 @@
   "hello": "হ্যালো",
   "area": "এলাকা",
   "area_sub": "নিরাপদ",
-  "safety": "নিরাপত্তা স্কোর",
+  "safety": "অসুরক্ষিত এলাকা থেকে দূরত্ব",
   "profile_info": "ব্যক্তিগত তথ্য",
   "kyc_info": "কে ওয়াই সি তথ্য",
   "setup_contacts": "জরুরি যোগাযোগ সেটআপ করুন",
