--- a/assets/translations/gu.json
+++ b/assets/translations/gu.json
@@ -36,7 +36,7 @@
   "hello": "નમસ્તે",
   "area": "વિસ્તાર",
   "area_sub": "સુરક્ષિત",
-  "safety": "સેફ્ટી સ્કોર",
+  "safety": "અસુરક્ષિત વિસ્તારથી અંતર",
   "profile_info": "વ્યક્તિગત માહિતી",
   "kyc_info": "KYC માહિતી",
   "setup_contacts": "આકસ્મિક સંપર્ક સેટ કરો",
