--- a/assets/translations/kn.json
+++ b/assets/translations/kn.json
@@ -36,7 +36,7 @@
   "hello": "ನಮಸ್ಕಾರ",
   "area": "ಪ್ರದೇಶ",
   "area_sub": "ಸುರಕ್ಷಿತ",
-  "safety": "ಭದ್ರತಾ ಅಂಕ",
+  "safety": "ಅಸುರಕ್ಷಿತ ಪ್ರದೇಶದಿಂದ ಅಂತರ",
   "profile_info": "ವೈಯಕ್ತಿಕ ಮಾಹಿತಿ",
   "kyc_info": "KYC ಮಾಹಿತಿ",
   "setup_contacts": "ತುರ್ತು ಸಂಪರ್ಕಗಳನ್ನು ಹೊಂದಿಸಿ",
