--- a/assets/translations/mr.json
+++ b/assets/translations/mr.json
@@ -36,7 +36,7 @@
   "hello": "नमस्कार",
   "area": "क्षेत्र",
   "area_sub": "सुरक्षित",
-  "safety": "सुरक्षा गुण",
+  "safety": "असुरक्षित क्षेत्रापासून अंतर",
   "profile_info": "वैयक्तिक माहिती",
   "kyc_info": "केवायसी माहिती",
   "setup_contacts": "आपत्कालीन संपर्क सेट करा",
