--- a/assets/translations/pa.json
+++ b/assets/translations/pa.json
@@ -36,7 +36,7 @@
   "hello": "ਸਤ ਸ੍ਰੀ ਅਕਾਲ",
   "area": "ਇਲਾਕਾ",
   "area_sub": "ਸੁਰੱਖਿਅਤ",
-  "safety": "ਸੁਰੱਖਿਆ ਸਕੋਰ",
+  "safety": "ਅਸੁਰੱਖਿਅਤ ਖੇਤਰ ਤੋਂ ਦੂਰੀ",
   "profile_info": "ਨਿੱਜੀ ਜਾਣਕਾਰੀ",
   "kyc_info": "KYC ਜਾਣਕਾਰੀ",
   "setup_contacts": "ਐਮਰਜੈਂਸੀ ਸੰਪਰਕ ਸੈੱਟ ਕਰੋ",
