--- a/assets/translations/ta.json
+++ b/assets/translations/ta.json
@@ -36,7 +36,7 @@
   "hello": "வணக்கம்",
   "area": "பகுதி",
   "area_sub": "பாதுகாப்பானது",
-  "safety": "பாதுகாப்பு மதிப்பெண்",
+  "safety": "பாதுகாப்பற்ற பகுதியிலிருந்து தூரம்",
   "profile_info": "தனிப்பட்ட தகவல்",
   "kyc_info": "KYC தகவல்",
   "setup_contacts": "அவசர தொடர்புகளை அமைக்கவும்",
