--- a/assets/translations/te.json
+++ b/assets/translations/te.json
@@ -36,7 +36,7 @@
   "hello": "హలో",
   "area": "ప్రాంతం",
   "area_sub": "సురక్షితం",
-  "safety": "భద్రతా స్కోరు",
+  "safety": "అసురక్షిత ప్రాంతం నుండి దూరం",
   "profile_info": "వ్యక్తిగత సమాచారం",
   "kyc_info": "KYC సమాచారం",
   "setup_contacts": "అత్యవసర కాంటాక్టులను సెట్ చేయండి",
