--- a/assets/translations/ur.json
+++ b/assets/translations/ur.json
@@ -36,7 +36,7 @@
   "hello": "السلام علیکم",
   "area": "علاقہ",
   "area_sub": "محفوظ",
-  "safety": "حفاظتی اسکور",
+  "safety": "غیر محفوظ علاقے سے فاصلہ",
   "profile_info": "ذاتی معلومات",
   "kyc_info": "KYC معلومات",
   "setup_contacts": "ایمرجنسی رابطے سیٹ کریں",
