--- a/assets/translations/hi.json
+++ b/assets/translations/hi.json
@@ -36,7 +36,7 @@
   "hello": "नमस्ते",
   "area": "क्षेत्र",
   "area_sub": "सुरक्षित",
-  "safety": "सुरक्षा स्कोर",
+  "safety": "असुरक्षित क्षेत्र से दूरी",
   "profile_info": "व्यक्तिगत जानकारी",
   "kyc_info": "केवाईसी जानकारी",
   "setup_contacts": "आपातकालीन संपर्क सेट करें",
