--- a/assets/translations/ml.json
+++ b/assets/translations/ml.json
@@ -36,7 +36,7 @@
   "hello": "നമസ്കാരം",
   "area": "പ്രദേശം",
   "area_sub": "സുരക്ഷിതം",
-  "safety": "സുരക്ഷാ സ്കോർ",
+  "safety": "അസുരക്ഷിത പ്രദേശത്തുനിന്നുള്ള ദൂരം",
   "profile_info": "വ്യക്തിഗത വിവരം",
   "kyc_info": "KYC വിവരം",
   "setup_contacts": "അടിയന്തര കോൺടാക്ടുകൾ സജ്ജമാക്കുക",
